--- a/examples/local/webcam.ipynb
+++ b/examples/local/webcam.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,9 +36,10 @@
     "\n",
     "def yield_images():\n",
     "    # capture video\n",
+    "    # Configure the webcam number if you have more than one.\n",
     "    with video_capture(0) as cap:\n",
-    "        cap.set(cv2.CAP_PROP_FRAME_WIDTH, 1280)\n",
-    "        cap.set(cv2.CAP_PROP_FRAME_HEIGHT, 720)\n",
+    "        cap.set(cv2.CAP_PROP_FRAME_WIDTH, 640)\n",
+    "        cap.set(cv2.CAP_PROP_FRAME_HEIGHT, 480)\n",
     "\n",
     "        while True:\n",
     "            # get video frame\n",
@@ -58,7 +59,7 @@
     "    cv2.rectangle(image, (x, y - size[1]), (x + size[0], y), (255, 0, 0), cv2.FILLED)\n",
     "    cv2.putText(image, label, point, font, font_scale, (255, 255, 255), thickness, lineType=cv2.LINE_AA)\n",
     "\n",
-    "existing_embs_ = glob(os.path.join(HERE, f'../your-faces/*.npy'))\n",
+    "existing_embs_ = glob(os.path.join(HERE, f'../../your-faces/*/*.npy'))\n",
     "existing_embs = []\n",
     "existing_names = []\n",
     "\n",
@@ -78,12 +79,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "[*] load ckpt from /home/tk/.virtualenvs/dev-python-3.7/lib/python3.7/site-packages/cltl_face_all/arcface/./pretrained_models/arc_res50/e_8_b_40000.ckpt\n"
      ]
@@ -104,57 +105,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n",
       "number of faces in this frame: 1\n",
       "number of faces in this frame: 1\n",
       "number of faces in this frame: 1\n",
@@ -234,13 +193,6 @@
     "\n",
     "cv2.destroyAllWindows()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -259,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.9-final"
   }
  },
  "nbformat": 4,
