--- a/examples/colab/1.visual-features-extraction-colab.ipynb
+++ b/examples/colab/1.visual-features-extraction-colab.ipynb
@@ -327,12 +327,14 @@
         "!pip install omegaconf==2.0.5\n",
         "!pip install tqdm av\n",
         "\n",
-        "!git clone https://github.com/cltl/ma-communicative-robots.git\n",
-        "\n",
         "# Download the annotations and stuff\n",
         "!wget https://raw.githubusercontent.com/declare-lab/MELD/master/data/MELD/train_sent_emo.csv\n",
         "!wget https://raw.githubusercontent.com/declare-lab/MELD/master/data/MELD/dev_sent_emo.csv\n",
-        "!wget https://raw.githubusercontent.com/declare-lab/MELD/master/data/MELD/test_sent_emo.csv"
+        "!wget https://raw.githubusercontent.com/declare-lab/MELD/master/data/MELD/test_sent_emo.csv\n",
+        "\n",
+        "!gdown --id 16ck7plW9v9eSHGCs5wuB2AhhufPRt3Wi\n",
+        "!unzip smaller-dataset.zip\n",
+        "!rm smaller-dataset.zip"
       ],
       "execution_count": 9,
       "outputs": [
@@ -422,18 +424,17 @@
         "\n",
         "# Only the train_sent_emo is relevant to us since the smaller datasets\n",
         "# are subset of the original train dataset.\n",
-        "annotation_path = 'train_sent_emo.csv'\n",
-        "        \n",
-        "vids_dir = \"ma-communicative-robots/multimodal/smaller-dataset/\"\n",
+        "annotation_path = 'train_sent_emo.csv'    \n",
+        "VIDS_DIR = 'smaller-dataset/'\n",
         "\n",
-        "datasets = {}\n",
-        "datasets['small'] = \"ma-communicative-robots/multimodal/dataset-small.json\"\n",
-        "datasets['medium'] = \"ma-communicative-robots/multimodal/dataset-medium.json\"\n",
-        "datasets['large'] = \"ma-communicative-robots/multimodal/dataset-large.json\"\n",
+        "datasets_ = {}\n",
+        "datasets_['small'] = \"dataset-small.json\"\n",
+        "datasets_['medium'] = \"dataset-medium.json\"\n",
+        "datasets_['large'] = \"dataset-large.json\"\n",
         "\n",
         "for datasize in ['small', 'medium', 'large']:\n",
-        "    with open(datasets[datasize], 'r') as stream:\n",
-        "        datasets[datasize] = json.load(stream)\n",
+        "    with open(datasets_[datasize], 'r') as stream:\n",
+        "        datasets_[datasize] = json.load(stream)\n",
         "\n",
         "with open(annotation_path) as f:\n",
         "    reader = csv.reader(f)\n",
@@ -443,37 +444,43 @@
         "# See if we have all of the videos\n",
         "for datasize in ['small', 'medium', 'large']:\n",
         "    for datatype in ['train', 'dev', 'test']:\n",
-        "        diautt_ = datasets[datasize][datatype]\n",
+        "        diautt_ = datasets_[datasize][datatype]\n",
         "        for diautt in diautt_:\n",
-        "            assert os.path.isfile(os.path.join(vids_dir, diautt))\n",
+        "            assert os.path.isfile(os.path.join(VIDS_DIR, diautt))\n",
         "\n",
         "# Find the corresponding speaker / emotion / sentiment from the annotations\n",
         "\n",
-        "vid2anno = {}\n",
+        "diautt2anno = {}\n",
         "for row in annotations[1:]:\n",
         "    SrNo, Utterance, Speaker, Emotion, Sentiment, Dialogue_ID,\\\n",
         "        Utterance_ID, Season, Episode, StartTime, EndTime = row\n",
         "\n",
-        "    if f\"dia{Dialogue_ID}_utt{Utterance_ID}.mp4\" not in str(os.listdir(os.path.join(vids_dir))):\n",
+        "    if f\"dia{Dialogue_ID}_utt{Utterance_ID}.mp4\" not in str(os.listdir(os.path.join(VIDS_DIR))):\n",
         "        continue\n",
-        "    vid2anno[f\"dia{Dialogue_ID}_utt{Utterance_ID}.mp4\"] = \\\n",
-        "        {'speaker':Speaker, \n",
-        "         'emotion': Emotion, \n",
-        "         'sentiment': Sentiment,\n",
-        "         'Utterance': Utterance}\n",
+        "    \n",
+        "    diautt2anno[f\"dia{Dialogue_ID}_utt{Utterance_ID}\"] = \\\n",
+        "        {'SrNo': SrNo, \n",
+        "        'Utterance': Utterance, \n",
+        "        'Speaker': Speaker, \n",
+        "        'Emotion': Emotion, \n",
+        "        'Sentiment': Sentiment, \n",
+        "        'Dialogue_ID': Dialogue_ID,\n",
+        "        'Utterance_ID': Utterance_ID, \n",
+        "        'Season': Season, \n",
+        "        'Episode': Episode, \n",
+        "        'StartTime': StartTime, \n",
+        "        'EndTime':EndTime}\n",
         "\n",
-        "for datasize in ['small', 'medium', 'large']:\n",
-        "    for datatype in ['train', 'dev', 'test']:\n",
-        "        diautt_ = datasets[datasize][datatype]\n",
-        "        for idx, diautt in enumerate(diautt_):\n",
-        "            \n",
-        "            datasets[datasize][datatype][idx] = \\\n",
-        "                (diautt, vid2anno[diautt])\n",
         "\n",
-        "with open('datasets.json', 'w', encoding='utf8') as json_file:\n",
-        "    json.dump(datasets, json_file, ensure_ascii=False)\n",
-        "\n",
-        "!cp datasets.json drive/MyDrive/"
+        "datasets = {}\n",
+        "for DATASIZE in ['small', 'medium', 'large']:\n",
+        "    datasets[DATASIZE] = {}\n",
+        "    for DATATYPE in ['train', 'dev', 'test']:\n",
+        "        datasets[DATASIZE][DATATYPE] = {}\n",
+        "        diautt_ = datasets_[DATASIZE][DATATYPE]\n",
+        "        for diautt in diautt_:\n",
+        "            diautt_without_mp4 = diautt.split('.mp4')[0]\n",
+        "            datasets[DATASIZE][DATATYPE][diautt_without_mp4] = diautt2anno[diautt_without_mp4]"
       ],
       "execution_count": 10,
       "outputs": []
