--- a/examples/colab/2.visual-features-check-colab.ipynb
+++ b/examples/colab/2.visual-features-check-colab.ipynb
@@ -50,17 +50,96 @@
         "!pip install omegaconf==2.0.5\n",
         "!pip install tqdm av\n",
         "\n",
-        "!git clone https://github.com/cltl/ma-communicative-robots.git\n",
-        "\n",
         "# Download the annotations and stuff\n",
         "!wget https://raw.githubusercontent.com/declare-lab/MELD/master/data/MELD/train_sent_emo.csv\n",
-        "!wget https://raw.githubusercontent.com/declare-lab/MELD/master/data/MELD/dev_sent_emo.csv\n",
-        "!wget https://raw.githubusercontent.com/declare-lab/MELD/master/data/MELD/test_sent_emo.csv\n",
+        "!wget https://raw.githubusercontent.com/leolani/cltl-face-all/master/examples/smaller-datatsets-jsons/dataset-small.json\n",
+        "!wget https://raw.githubusercontent.com/leolani/cltl-face-all/master/examples/smaller-datatsets-jsons/dataset-medium.json\n",
+        "!wget https://raw.githubusercontent.com/leolani/cltl-face-all/master/examples/smaller-datatsets-jsons/dataset-large.json\n",
         "\n",
-        "!gdown --id 1U442a03S8D60ojqviwRTiZcwZ_phg6Aj\n",
+        "# !gdown --id 1U442a03S8D60ojqviwRTiZcwZ_phg6Aj\n",
         "!gdown --id 1-2LeHC_5Cm2gWWT6vBrVhp8jorbjkN1_\n",
+        "!unzip visual-features.zip\n",
+        "!rm visual-features.zip\n",
         "\n",
-        "!unzip visual-features.zip"
+        "!gdown --id 16ck7plW9v9eSHGCs5wuB2AhhufPRt3Wi\n",
+        "!unzip smaller-dataset.zip\n",
+        "!rm smaller-dataset.zip\n",
+        "\n",
+        "!ls smaller-dataset/  |  wc -l\n",
+        "!ls visual-features | wc -l\n",
+        "\n",
+        "import os\n",
+        "from glob import glob\n",
+        "import csv\n",
+        "import json\n",
+        "import numpy as np\n",
+        "\n",
+        "# Only the train_sent_emo is relevant to us since the smaller datasets\n",
+        "# are subset of the original train dataset.\n",
+        "annotation_path = 'train_sent_emo.csv'    \n",
+        "VIDS_DIR = 'smaller-dataset/'\n",
+        "\n",
+        "datasets_ = {}\n",
+        "datasets_['small'] = \"dataset-small.json\"\n",
+        "datasets_['medium'] = \"dataset-medium.json\"\n",
+        "datasets_['large'] = \"dataset-large.json\"\n",
+        "\n",
+        "for datasize in ['small', 'medium', 'large']:\n",
+        "    with open(datasets_[datasize], 'r') as stream:\n",
+        "        datasets_[datasize] = json.load(stream)\n",
+        "\n",
+        "with open(annotation_path) as f:\n",
+        "    reader = csv.reader(f)\n",
+        "    annotations = list(reader)\n",
+        "\n",
+        "\n",
+        "# See if we have all of the videos\n",
+        "for datasize in ['small', 'medium', 'large']:\n",
+        "    for datatype in ['train', 'dev', 'test']:\n",
+        "        diautt_ = datasets_[datasize][datatype]\n",
+        "        for diautt in diautt_:\n",
+        "            assert os.path.isfile(os.path.join(VIDS_DIR, diautt))\n",
+        "\n",
+        "# Find the corresponding speaker / emotion / sentiment from the annotations\n",
+        "\n",
+        "diautt2anno = {}\n",
+        "for row in annotations[1:]:\n",
+        "    SrNo, Utterance, Speaker, Emotion, Sentiment, Dialogue_ID,\\\n",
+        "        Utterance_ID, Season, Episode, StartTime, EndTime = row\n",
+        "\n",
+        "    if f\"dia{Dialogue_ID}_utt{Utterance_ID}.mp4\" not in str(os.listdir(os.path.join(VIDS_DIR))):\n",
+        "        continue\n",
+        "    \n",
+        "    diautt2anno[f\"dia{Dialogue_ID}_utt{Utterance_ID}\"] = \\\n",
+        "        {'SrNo': SrNo, \n",
+        "        'Utterance': Utterance, \n",
+        "        'Speaker': Speaker, \n",
+        "        'Emotion': Emotion, \n",
+        "        'Sentiment': Sentiment, \n",
+        "        'Dialogue_ID': Dialogue_ID,\n",
+        "        'Utterance_ID': Utterance_ID, \n",
+        "        'Season': Season, \n",
+        "        'Episode': Episode, \n",
+        "        'StartTime': StartTime, \n",
+        "        'EndTime':EndTime}\n",
+        "\n",
+        "\n",
+        "datasets = {}\n",
+        "for DATASIZE in ['small', 'medium', 'large']:\n",
+        "    datasets[DATASIZE] = {}\n",
+        "    for DATATYPE in ['train', 'dev', 'test']:\n",
+        "        datasets[DATASIZE][DATATYPE] = {}\n",
+        "        diautt_ = datasets_[DATASIZE][DATATYPE]\n",
+        "        for diautt in diautt_:\n",
+        "            diautt_without_mp4 = diautt.split('.mp4')[0]\n",
+        "            datasets[DATASIZE][DATATYPE][diautt_without_mp4] = diautt2anno[diautt_without_mp4]\n",
+        "\n",
+        "\n",
+        "visual_features = glob('visual-features/*.npy')\n",
+        "visual_features = {os.path.basename(vf).split('.npy')[0] : np.load(vf, allow_pickle=True).item() for vf in visual_features}\n",
+        "\n",
+        "with open('datasets.json', 'w', encoding='utf8') as stream:\n",
+        "    json.dump(datasets, stream, ensure_ascii=False)"
       ],
       "execution_count": 1,
       "outputs": [
@@ -971,22 +1050,13 @@
         "outputId": "cd09d118-9229-41bb-caab-344c2f0310d6"
       },
       "source": [
-        "VISUAL_FEATURES_PATH = 'visual-features/'\n",
-        "VIDEOS_PATH = \"ma-communicative-robots/multimodal/smaller-dataset/\"\n",
-        "\n",
         "from glob import glob\n",
         "import random\n",
         "import os\n",
         "import json\n",
         "\n",
-        "DATASET_PATH = 'datasets.json'\n",
-        "\n",
-        "with open(DATASET_PATH, 'r') as stream:\n",
-        "    datasets = json.load(stream)\n",
-        "\n",
-        "for DATASIZE in ['small', 'medium', 'large']:\n",
-        "    for DATASET in ['train', 'dev', 'test']:\n",
-        "        datasets[DATASIZE][DATASET] ={diauttmp4.split('.mp4')[0] : annot for (diauttmp4, annot) in datasets[DATASIZE][DATASET]}\n",
+        "VISUAL_FEATURES_PATH = 'visual-features/'\n",
+        "VIDEOS_PATH = \"smaller-dataset/\"\n",
         "\n",
         "\n",
         "diautt = random.choice([foo for foo, bar in datasets['small']['train'].items()])\n",
