--- a/examples/colab/3.find-relevant-faces-colab.ipynb
+++ b/examples/colab/3.find-relevant-faces-colab.ipynb
@@ -263,6 +263,13 @@
   },
   "cells": [
     {
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/leolani/cltl-face-all/blob/master/examples/colab/find-relevant-faces-colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -313,9 +320,9 @@
         "\n",
         "# Download the annotations and stuff\n",
         "!wget https://raw.githubusercontent.com/declare-lab/MELD/master/data/MELD/train_sent_emo.csv\n",
-        "!wget https://raw.githubusercontent.com/cltl/ma-communicative-robots/master/multimodal/dataset-small.json\n",
-        "!wget https://raw.githubusercontent.com/cltl/ma-communicative-robots/master/multimodal/dataset-medium.json\n",
-        "!wget https://raw.githubusercontent.com/cltl/ma-communicative-robots/master/multimodal/dataset-large.json\n",
+        "!wget https://raw.githubusercontent.com/leolani/cltl-face-all/master/examples/smaller-datatsets-jsons/dataset-small.json\n",
+        "!wget https://raw.githubusercontent.com/leolani/cltl-face-all/master/examples/smaller-datatsets-jsons/dataset-medium.json\n",
+        "!wget https://raw.githubusercontent.com/leolani/cltl-face-all/master/examples/smaller-datatsets-jsons/dataset-large.json\n",
         "\n",
         "# !gdown --id 1U442a03S8D60ojqviwRTiZcwZ_phg6Aj\n",
         "!gdown --id 1-2LeHC_5Cm2gWWT6vBrVhp8jorbjkN1_\n",
