--- a/examples/colab/1.visual-features-extraction-colab.ipynb
+++ b/examples/colab/1.visual-features-extraction-colab.ipynb
@@ -273,7 +273,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://github.com/leolani/cltl-face-all/blob/master/examples/colab/1.visual-features-extraction-colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/leolani/cltl-face-all/blob/master/examples/colab/1.visual-features-extraction-colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n"
       ]
     },
     {
