--- a/examples/colab/1.visual-features-extraction-colab.ipynb
+++ b/examples/colab/1.visual-features-extraction-colab.ipynb
@@ -329,8 +329,10 @@
         "\n",
         "# Download the annotations and stuff\n",
         "!wget https://raw.githubusercontent.com/declare-lab/MELD/master/data/MELD/train_sent_emo.csv\n",
-        "!wget https://raw.githubusercontent.com/declare-lab/MELD/master/data/MELD/dev_sent_emo.csv\n",
-        "!wget https://raw.githubusercontent.com/declare-lab/MELD/master/data/MELD/test_sent_emo.csv\n",
+        "!wget https://raw.githubusercontent.com/leolani/cltl-face-all/master/examples/smaller-datatsets-jsons/dataset-small.json\n",
+        "!wget https://raw.githubusercontent.com/leolani/cltl-face-all/master/examples/smaller-datatsets-jsons/dataset-medium.json\n",
+        "!wget https://raw.githubusercontent.com/leolani/cltl-face-all/master/examples/smaller-datatsets-jsons/dataset-large.json\n",
+        "\n",
         "\n",
         "!gdown --id 16ck7plW9v9eSHGCs5wuB2AhhufPRt3Wi\n",
         "!unzip smaller-dataset.zip\n",
@@ -506,10 +508,11 @@
       },
       "source": [
         "import random\n",
-        "chosen = random.choice(datasets['small']['train'])\n",
+        "chosen = random.choice(list(datasets['small']['train'].keys()))\n",
         "print(chosen)\n",
+        "print(datasets['small']['train'][chosen])\n",
         "\n",
-        "vidpath = os.path.join(vids_dir, chosen[0])\n",
+        "vidpath = os.path.join(VIDS_DIR, chosen) + '.mp4'\n",
         "print(vidpath)\n",
         "\n",
         "from IPython.display import HTML\n",
