--- a/examples/colab/2.visual-features-check-colab.ipynb
+++ b/examples/colab/2.visual-features-check-colab.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cltl/ma-communicative-robots/blob/master/multimodal/visual-features-check-colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/leolani/cltl-face-all/blob/master/examples/colab/2.visual-features-check-colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n"
       ]
     },
     {
