--- a/examples/colab/3.find-relevant-faces-colab.ipynb
+++ b/examples/colab/3.find-relevant-faces-colab.ipynb
@@ -264,7 +264,7 @@
   "cells": [
     {
       "source": [
-        "<a href=\"https://colab.research.google.com/github/leolani/cltl-face-all/blob/master/examples/colab/find-relevant-faces-colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/leolani/cltl-face-all/blob/master/examples/colab/3.find-relevant-faces-colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n"
       ],
       "cell_type": "markdown",
       "metadata": {}
