--- a/examples/local/friends2gmrc.ipynb
+++ b/examples/local/friends2gmrc.ipynb
@@ -23,6 +23,13 @@
  "cells": [
   {
    "source": [
+    "# WIP"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "# load the packages\n",
     "\n",
     "Make sure that you installed the python package `grmc` from https://github.com/cltl/GRMCAnnotation "
