--- a/examples/local/register-your-face.ipynb
+++ b/examples/local/register-your-face.ipynb
@@ -11,18 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import shutil\n",
     "import os\n",
-    "HERE = os.getcwd()\n",
     "\n",
     "your_name = \"Tae\"\n",
     "\n",
-    "shutil.rmtree(os.path.join(HERE, f'../your-faces/{your_name}/'), ignore_errors=True)\n",
-    "os.makedirs(os.path.join(HERE, f'../your-faces/{your_name}/'))"
+    "os.makedirs(f\"DEBUG/{your_name}/\", exist_ok=True)"
    ]
   },
   {
@@ -34,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,8 +54,8 @@
     "def yield_images():\n",
     "    # capture video\n",
     "    with video_capture(0) as cap:\n",
-    "        cap.set(cv2.CAP_PROP_FRAME_WIDTH, 1280)\n",
-    "        cap.set(cv2.CAP_PROP_FRAME_HEIGHT, 720)\n",
+    "        cap.set(cv2.CAP_PROP_FRAME_WIDTH, 640)\n",
+    "        cap.set(cv2.CAP_PROP_FRAME_HEIGHT, 480)\n",
     "\n",
     "        while True:\n",
     "            # get video frame\n",
@@ -87,12 +85,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "[*] load ckpt from /home/tk/.virtualenvs/dev-python-3.7/lib/python3.7/site-packages/cltl_face_all/arcface/./pretrained_models/arc_res50/e_8_b_40000.ckpt\n"
      ]
@@ -112,128 +110,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
      "output_type": "stream",
-     "text": [
-      "/home/tk/.virtualenvs/dev-python-3.7/lib/python3.7/site-packages/cltl_face_all/face_alignment/matlab_cp2tform.py:84: FutureWarning: `rcond` parameter will change to the default of machine precision times ``max(M, N)`` where M and N are the input matrix dimensions.\n",
-      "To use the future default and silence this warning we advise to pass `rcond=None`, to keep using the old, explicitly pass `rcond=-1`.\n",
-      "  r, _, _, _ = lstsq(X, U)\n"
-     ]
-    },
-    {
      "name": "stdout",
-     "output_type": "stream",
      "text": [
-      "1 / 100\n",
-      "2 / 100\n",
-      "3 / 100\n",
-      "4 / 100\n",
-      "5 / 100\n",
-      "6 / 100\n",
-      "7 / 100\n",
-      "8 / 100\n",
-      "9 / 100\n",
-      "10 / 100\n",
-      "11 / 100\n",
-      "12 / 100\n",
-      "13 / 100\n",
-      "14 / 100\n",
-      "15 / 100\n",
-      "16 / 100\n",
-      "17 / 100\n",
-      "18 / 100\n",
-      "19 / 100\n",
-      "20 / 100\n",
-      "21 / 100\n",
-      "22 / 100\n",
-      "23 / 100\n",
-      "24 / 100\n",
-      "25 / 100\n",
-      "26 / 100\n",
-      "27 / 100\n",
-      "28 / 100\n",
-      "29 / 100\n",
-      "30 / 100\n",
-      "31 / 100\n",
-      "32 / 100\n",
-      "33 / 100\n",
-      "34 / 100\n",
-      "35 / 100\n",
-      "36 / 100\n",
-      "37 / 100\n",
-      "38 / 100\n",
-      "39 / 100\n",
-      "40 / 100\n",
-      "41 / 100\n",
-      "42 / 100\n",
-      "43 / 100\n",
-      "44 / 100\n",
-      "45 / 100\n",
-      "46 / 100\n",
-      "47 / 100\n",
-      "48 / 100\n",
-      "49 / 100\n",
-      "50 / 100\n",
-      "51 / 100\n",
-      "52 / 100\n",
-      "53 / 100\n",
-      "54 / 100\n",
-      "55 / 100\n",
-      "56 / 100\n",
-      "57 / 100\n",
-      "58 / 100\n",
-      "59 / 100\n",
-      "60 / 100\n",
-      "61 / 100\n",
-      "62 / 100\n",
-      "63 / 100\n",
-      "64 / 100\n",
-      "65 / 100\n",
-      "66 / 100\n",
-      "67 / 100\n",
-      "68 / 100\n",
-      "69 / 100\n",
-      "70 / 100\n",
-      "71 / 100\n",
-      "72 / 100\n",
-      "73 / 100\n",
-      "74 / 100\n",
-      "75 / 100\n",
-      "76 / 100\n",
-      "77 / 100\n",
-      "78 / 100\n",
-      "79 / 100\n",
-      "80 / 100\n",
-      "81 / 100\n",
-      "82 / 100\n",
-      "83 / 100\n",
-      "84 / 100\n",
-      "85 / 100\n",
-      "86 / 100\n",
-      "87 / 100\n",
-      "88 / 100\n",
-      "89 / 100\n",
-      "90 / 100\n",
-      "91 / 100\n",
-      "92 / 100\n",
-      "93 / 100\n",
-      "94 / 100\n",
-      "95 / 100\n",
-      "96 / 100\n",
-      "97 / 100\n",
-      "98 / 100\n",
-      "99 / 100\n",
-      "100 / 100\n"
+      "1 / 10\n",
+      "2 / 10\n",
+      "3 / 10\n",
+      "4 / 10\n",
+      "5 / 10\n",
+      "6 / 10\n",
+      "7 / 10\n",
+      "8 / 10\n",
+      "9 / 10\n",
+      "10 / 10\n"
      ]
     }
    ],
    "source": [
     "count = 0\n",
-    "num_to_take = 100\n",
+    "num_to_take = 50\n",
     "for idx, img in enumerate(yield_images()):\n",
     "    bboxes = fd.detect_faces(img[np.newaxis, ...])\n",
     "    landmarks = fd.detect_landmarks(img[np.newaxis, ...], bboxes)\n",
@@ -265,7 +164,7 @@
     "        # ag and af return a np.ndarray\n",
     "        embeddings = af.predict(face)\n",
     "\n",
-    "        with open(os.path.join(HERE, f'../your-faces/{your_name}/{idx}.npy'), 'wb') as stream:\n",
+    "        with open(f\"DEBUG/{your_name}/{idx}.npy\", 'wb') as stream:\n",
     "            np.save(stream, embeddings)\n",
     "\n",
     "        # print(len(bbox), len(landmark), len(face), len(age), len(gender), len(embeddings))\n",
@@ -305,14 +204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "from glob import glob\n",
     "from cltl_face_all.arcface import calc_angle_distance\n",
     "\n",
-    "embs_ = glob(os.path.join(HERE, f'../your-faces/{your_name}/*npy'))\n",
+    "embs_ = glob(f\"DEBUG/{your_name}/*.npy\")\n",
     "embs = []\n",
     "\n",
     "for emb in embs_:\n",
@@ -330,10 +229,10 @@
     "emb_mean = embs.mean(axis=0)\n",
     "emb_final = emb_mean / np.linalg.norm(emb_mean)\n",
     "\n",
-    "with open(os.path.join(HERE, f'../your-faces/{your_name}.npy'), 'wb') as stream:\n",
+    "with open(f\"DEBUG/{your_name}.npy\", 'wb') as stream:\n",
     "    np.save(stream, emb_final)\n",
     "\n",
-    "shutil.rmtree(os.path.join(HERE, f'../your-faces/{your_name}/'), ignore_errors=True)"
+    "# shutil.rmtree(f\"DEBUG/{your_name}\", ignore_errors=True)"
    ]
   }
  ],
@@ -353,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.9-final"
   }
  },
  "nbformat": 4,
