--- a/examples/local/friends2gmrc.ipynb
+++ b/examples/local/friends2gmrc.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "outputPrepend"
@@ -82,7 +82,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "taset/dia576_utt0.mp4  \n",
+      "a576_utt0.mp4  \n",
       "  inflating: smaller-dataset/dia576_utt1.mp4  \n",
       "  inflating: smaller-dataset/dia576_utt2.mp4  \n",
       "  inflating: smaller-dataset/dia576_utt3.mp4  \n",
@@ -504,22 +504,23 @@
       "  inflating: smaller-dataset/dia1029_utt12.mp4  \n",
       "  inflating: smaller-dataset/dia1029_utt13.mp4  \n",
       "  inflating: smaller-dataset/dia1029_utt14.mp4  \n",
-      "/home/tk/repos/GRMCAnnotation/demos\n"
+      "/home/tk/repos/cltl-face-all/examples/local\n"
      ]
     }
    ],
    "source": [
-    "os.makedirs('data', exist_ok=True)\n",
+    "os.makedirs('DEBUG', exist_ok=True)\n",
     "\n",
-    "%cd data\n",
+    "%cd DEBUG\n",
     "!wget https://raw.githubusercontent.com/declare-lab/MELD/master/data/MELD/train_sent_emo.csv\n",
-    "!wget https://raw.githubusercontent.com/cltl/ma-communicative-robots/master/multimodal/dataset-small.json\n",
-    "!wget https://raw.githubusercontent.com/cltl/ma-communicative-robots/master/multimodal/dataset-medium.json\n",
-    "!wget https://raw.githubusercontent.com/cltl/ma-communicative-robots/master/multimodal/dataset-large.json\n",
+    "!wget https://raw.githubusercontent.com/leolani/cltl-face-all/master/examples/smaller-datatsets-jsons/dataset-small.json\n",
+    "!wget https://raw.githubusercontent.com/leolani/cltl-face-all/master/examples/smaller-datatsets-jsons/dataset-medium.json\n",
+    "!wget https://raw.githubusercontent.com/leolani/cltl-face-all/master/examples/smaller-datatsets-jsons/dataset-large.json\n",
     "\n",
     "!gdown --id 1-2LeHC_5Cm2gWWT6vBrVhp8jorbjkN1_\n",
     "!unzip visual-features.zip\n",
     "!rm visual-features.zip\n",
+    "\n",
     "!gdown --id 16ck7plW9v9eSHGCs5wuB2AhhufPRt3Wi\n",
     "!unzip smaller-dataset.zip\n",
     "!rm smaller-dataset.zip\n",
