Find better face angle threshold

--- a/examples/local/webcam.ipynb
+++ b/examples/local/webcam.ipynb
@@ -116,7 +116,211 @@
       "number of faces in this frame: 1\n",
       "number of faces in this frame: 1\n",
       "number of faces in this frame: 1\n",
-      "number of faces in this frame: 1\n"
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 1\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n",
+      "number of faces in this frame: 2\n"
      ]
     }
    ],
@@ -165,8 +369,8 @@
     "            dists = calc_angle_distance(emb, existing_embs)\n",
     "\n",
     "            candidate, dist = existing_names[np.argmin(dists)], np.min(dists)\n",
-    "            angle_dist_threshold = 1.0\n",
-    "            if dist < angle_dist_threshold:\n",
+    "            ANGLE_DIST_THRESHOLD = 1.15\n",
+    "            if dist < ANGLE_DIST_THRESHOLD:\n",
     "                label = f\"{candidate}\"\n",
     "                draw_label(img, (x2, y2), label, font_scale=0.5, thickness=1)\n",
     "\n",
